New database structure for supporting multiple leaderboards

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ flyway.user=databaseUser
 flyway.password=databasePassword
 flyway.schemas=app-db
 flyway.url=jdbc:h2:mem:db
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:app-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=databaseUser
+spring.datasource.password=databasePassword
